...
                      padding: const EdgeInsets.symmetric(vertical: 16),
                      elevation: 0,
                    ),
                    child: Text(
                      widget.mode == TaskFormMode.create
                          ? 'Create Task'
                          : 'Update Task',
                    ),
                  ),
                ),
              ],
            ),

...
